Updated to 1.1.0 Updated nuspec file

--- a/MegaApiClient.nuspec
+++ b/MegaApiClient.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>MegaApiClient</id>
-        <version>1.0.4</version>
+        <version>1.1.0</version>
         <title>Mega.co.nz client library</title>
         <authors>Grégoire Pailler</authors>
         <owners>Grégoire Pailler</owners>
@@ -14,12 +14,14 @@
         <language>en-US</language>
         <tags>mega mega.co.nz api</tags>
         <dependencies>
-            <dependency id="Newtonsoft.Json" version="5.0.6" />
+            <dependency id="Newtonsoft.Json" version="6.0.8" />
         </dependencies>
     </metadata>
     <files>
-        <file src="MegaApiClient\bin\Release\MegaApiClient.dll" target="lib\MegaApiClient.dll" />
-        <file src="MegaApiClient\bin\Release\MegaApiClient.xml" target="lib\MegaApiClient.xml" />
-        <file src="LICENSE" target="LICENSE" />
+        <file src="MegaApiClient-3.5\bin\Release\MegaApiClient.dll" target="lib\net35\MegaApiClient.dll" />
+        <file src="MegaApiClient-3.5\bin\Release\MegaApiClient.xml" target="lib\net35\MegaApiClient.xml" />
+        <file src="MegaApiClient-4.0\bin\Release\MegaApiClient.dll" target="lib\net40\MegaApiClient.dll" />
+        <file src="MegaApiClient-4.0\bin\Release\MegaApiClient.xml" target="lib\net40\MegaApiClient.xml" />
+        <file src="LICENSE" target="lib\LICENSE" />
     </files>
 </package>
