--- a/MegaApiClient.nuspec
+++ b/MegaApiClient.nuspec
@@ -18,10 +18,10 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="MegaApiClient-3.5\bin\Release\MegaApiClient.dll" target="lib\net35\MegaApiClient.dll" />
-        <file src="MegaApiClient-3.5\bin\Release\MegaApiClient.xml" target="lib\net35\MegaApiClient.xml" />
-        <file src="MegaApiClient-4.0\bin\Release\MegaApiClient.dll" target="lib\net40\MegaApiClient.dll" />
-        <file src="MegaApiClient-4.0\bin\Release\MegaApiClient.xml" target="lib\net40\MegaApiClient.xml" />
+        <file src="MegaApiClient-3.5/bin/Release/MegaApiClient.dll" target="lib\net35\MegaApiClient.dll" />
+        <file src="MegaApiClient-3.5/bin/Release/MegaApiClient.xml" target="lib\net35\MegaApiClient.xml" />
+        <file src="MegaApiClient-4.0/bin/Release/MegaApiClient.dll" target="lib\net40\MegaApiClient.dll" />
+        <file src="MegaApiClient-4.0/bin/Release/MegaApiClient.xml" target="lib\net40\MegaApiClient.xml" />
         <file src="LICENSE" target="lib\LICENSE" />
     </files>
 </package>
