Added UTs for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: csharp
 solution: MegaApiClient.sln
 install:
   - nuget restore MegaApiClient.sln
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+
 script:
   - xbuild /p:Configuration=Release MegaApiClient.sln
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./MegaApiClient.Tests/bin/Release/MegaApiClient.Tests.dll
   - nuget pack MegaApiClient.nuspec
