--- a/MegaApiClient.Tests/packages.config
+++ b/MegaApiClient.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.1.0" targetFramework="net35" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net35" />
   <package id="NUnit" version="2.6.4" targetFramework="net35" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net35" />
 </packages>
