--- a/MegaApiClient.Tests/MegaApiClient.Tests.csproj
+++ b/MegaApiClient.Tests/MegaApiClient.Tests.csproj
@@ -63,11 +63,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Login.cs" />
+    <Compile Include="NodeOperationsAnonymous.cs" />
+    <Compile Include="NodeOperationsAuthenticated.cs" />
     <Compile Include="NodeOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="TestsBase.cs" />
     <Compile Include="Upload.cs" />
+    <Compile Include="UploadAnonymous.cs" />
+    <Compile Include="UploadAuthenticated.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\key.snk">
