--- a/MegaApiClient.Tests/packages.config
+++ b/MegaApiClient.Tests/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coveralls.net" version="0.5.0" targetFramework="net40" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
   <package id="NUnit" version="2.6.4" targetFramework="net40" />
+  <package id="NUnit.Runners" version="2.6.4" targetFramework="net40" />
+  <package id="OpenCover" version="4.5.3723" targetFramework="net40" />
   <package id="Polly-Signed" version="2.2.1" targetFramework="net40" />
 </packages>
