--- a/MegaApiClient.Tests/MegaApiClient.Tests.csproj
+++ b/MegaApiClient.Tests/MegaApiClient.Tests.csproj
@@ -75,9 +75,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="TestsBase.cs" />
-    <Compile Include="Upload.cs" />
-    <Compile Include="UploadAnonymous.cs" />
-    <Compile Include="UploadAuthenticated.cs" />
+    <Compile Include="DownloadUpload.cs" />
+    <Compile Include="DownloadUploadAnonymous.cs" />
+    <Compile Include="DownloadUploadAuthenticated.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\key.snk">
@@ -90,6 +90,11 @@
       <Project>{0bab4e80-f6d1-452c-8443-3bd0d53d4d9a}</Project>
       <Name>MegaApiClient-4.0</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\SampleFile.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
