--- a/MegaApiClient.Tests/packages.config
+++ b/MegaApiClient.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="coveralls.net" version="0.5.0" targetFramework="net40" />
+  <package id="FiddlerCore" version="4.5.1.0" targetFramework="net4" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
   <package id="NUnit" version="2.6.4" targetFramework="net40" />
