- Replaced Upload(string filename, INode parent) signature to UploadFile(string filename, INode parent) - Used IProgress interface to report progression for async methods - Added MegaApiClient.ReportProgressChunkSize to customize the threshold between each progression report - Added new UTs for DownloadAsync/UploadAsync methods

--- a/MegaApiClient-4.5/MegaApiClient-4.5.csproj
+++ b/MegaApiClient-4.5/MegaApiClient-4.5.csproj
@@ -104,6 +104,9 @@
     <Compile Include="..\MegaApiClient\Node.cs">
       <Link>Node.cs</Link>
     </Compile>
+    <Compile Include="..\MegaApiClient\ProgressionStream.cs">
+      <Link>ProgressionStream.cs</Link>
+    </Compile>
     <Compile Include="..\MegaApiClient\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
