Enable all tests

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ after_build:
 - nuget pack MegaApiClient.nuspec
 
 test_script:
-  - ps: packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -targetdir:MegaApiClient.Tests -target:nunit3-console.exe "-targetargs:""bin\$env:CONFIGURATION\MegaApiClient.Tests.dll"" --result=""..\myresults.xml;format=AppVeyor"" --where=""method =~ DownloadNode_ToStream_Succeeds"" --workers=1" -returntargetcode "-filter:+[*]CG.Web.MegaApiClient* -[MegaApiClient.Tests]*" -output:opencoverCoverage.xml
+  - ps: packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -targetdir:MegaApiClient.Tests -target:nunit3-console.exe "-targetargs:""bin\$env:CONFIGURATION\MegaApiClient.Tests.dll"" --result=""..\myresults.xml;format=AppVeyor"" --workers=1" -returntargetcode "-filter:+[*]CG.Web.MegaApiClient* -[MegaApiClient.Tests]*" -output:opencoverCoverage.xml
   - ps: |
       if(-not $env:APPVEYOR_PULL_REQUEST_NUMBER)
       {
