--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,6 +36,9 @@ test_script:
         packages\coveralls.net.0.6.0\tools\csmacnz.Coveralls.exe --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
       }
 
+after_test:
+  - appveyor PushArtifact "$env:APPVEYOR_BUILD_FOLDER\myresults.xml" -DeploymentName "NUnit results"
+
 artifacts:
 - path: MegaApiClient.*.nupkg
   name: MegaApiClient package
