Add appveyor build for feature/bug branches

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ branches:
   only:
   - develop
   - master
+  - /feature-.*/
+  - /bug-.*/
 skip_tags: true
 configuration: Release
 platform: Any CPU
