--- a/MegaApiClient.Tests/packages.config
+++ b/MegaApiClient.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NUnit" version="3.0.1" targetFramework="net45" />
   <package id="OpenCover" version="4.6.519" targetFramework="net45" />
+  <package id="Polly-Signed" version="4.1.2" targetFramework="net45" />
 </packages>
