--- a/MegaApiClient.Tests/packages.config
+++ b/MegaApiClient.Tests/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="coveralls.net" version="0.6.0" targetFramework="net45" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="NUnit" version="3.0.1" targetFramework="net45" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
+  <package id="coveralls.net" version="0.7.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Moq" version="4.5.23" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="NUnit" version="3.5.0" targetFramework="net45" />
   <package id="OpenCover" version="4.6.519" targetFramework="net45" />
-  <package id="Polly-Signed" version="4.1.2" targetFramework="net45" />
+  <package id="Polly-Signed" version="4.3.0" targetFramework="net45" />
 </packages>
