--- a/MegaApiClient-4.5/MegaApiClient-4.5.csproj
+++ b/MegaApiClient-4.5/MegaApiClient-4.5.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
