Used HttpClient for .net40 and .net45 Fixed coverage

--- a/MegaApiClient-3.5/MegaApiClient-3.5.csproj
+++ b/MegaApiClient-3.5/MegaApiClient-3.5.csproj
@@ -105,8 +105,8 @@
     <Compile Include="..\MegaApiClient\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="..\MegaApiClient\WebClient.cs">
-      <Link>WebClient.cs</Link>
+    <Compile Include="..\MegaApiClient\WebClient_HttpWebRequest.cs">
+      <Link>WebClient_HttpWebRequest.cs</Link>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
