--- a/MegaApiClient-4.5/MegaApiClient-4.5.csproj
+++ b/MegaApiClient-4.5/MegaApiClient-4.5.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
@@ -114,8 +115,8 @@
     <Compile Include="..\MegaApiClient\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="..\MegaApiClient\WebClient.cs">
-      <Link>WebClient.cs</Link>
+    <Compile Include="..\MegaApiClient\WebClient_HttpClient.cs">
+      <Link>WebClient_HttpClient.cs</Link>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
