Integrated PR #48 - Added support for ModificationDate on files (previous ModificationDate property was the CreationDate) - Added MegaApiClient.IsLoggedIn property - Added arguments ModificationDate and CancellationToken on Upload method - Introduced a new Options class to centralize all customization settings (application key, timeouts, retries...) - Attributes class is able to serialize/deserialize CRC and ModificationDate - MegaApiClient api requests are synchronized on a single thread by default now - A new event ApiRequestFailed is added to handle Api errors

--- a/MegaApiClient-4.0/MegaApiClient-4.0.csproj
+++ b/MegaApiClient-4.0/MegaApiClient-4.0.csproj
@@ -21,7 +21,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Debug\MegaApiClient.XML</DocumentationFile>
@@ -33,7 +33,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NET40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\MegaApiClient.xml</DocumentationFile>
@@ -67,11 +67,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\MegaApiClient\BigInteger.cs">
-      <Link>BigInteger.cs</Link>
+    <Compile Include="..\MegaApiClient\CancellableStream.cs">
+      <Link>CancellableStream.cs</Link>
     </Compile>
-    <Compile Include="..\MegaApiClient\Crypto.cs">
-      <Link>Crypto.cs</Link>
+    <Compile Include="..\MegaApiClient\Cryptography\BigInteger.cs">
+      <Link>Cryptography\BigInteger.cs</Link>
+    </Compile>
+    <Compile Include="..\MegaApiClient\Cryptography\Crc32.cs">
+      <Link>Cryptography\Crc32.cs</Link>
+    </Compile>
+    <Compile Include="..\MegaApiClient\Cryptography\Crypto.cs">
+      <Link>Cryptography\Crypto.cs</Link>
     </Compile>
     <Compile Include="..\MegaApiClient\Exceptions.cs">
       <Link>Exceptions.cs</Link>
@@ -103,6 +109,9 @@
     <Compile Include="..\MegaApiClient\Node.cs">
       <Link>Node.cs</Link>
     </Compile>
+    <Compile Include="..\MegaApiClient\Options.cs">
+      <Link>Options.cs</Link>
+    </Compile>
     <Compile Include="..\MegaApiClient\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
@@ -112,7 +121,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
