Added ApiRequestFailed event in interfae and renamed ApiRequestFailedArgs to ApiRequestFailedEventArgs

--- a/MegaApiClient-3.5/MegaApiClient-3.5.csproj
+++ b/MegaApiClient-3.5/MegaApiClient-3.5.csproj
@@ -66,6 +66,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MegaApiClient\ApiRequestFailedEventArgs.cs">
+      <Link>ApiRequestFailedEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\MegaApiClient\Cryptography\BigInteger.cs">
       <Link>Cryptography\BigInteger.cs</Link>
     </Compile>
