--- a/MegaApiClient-4.0/MegaApiClient-4.0.csproj
+++ b/MegaApiClient-4.0/MegaApiClient-4.0.csproj
@@ -67,6 +67,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MegaApiClient\ApiRequestFailedEventArgs.cs">
+      <Link>ApiRequestFailedEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\MegaApiClient\CancellableStream.cs">
       <Link>CancellableStream.cs</Link>
     </Compile>
