Custom UserAgent. LogonSessionToken and Login with it to reuse an active session.

--- a/MegaApiClient-4.5/MegaApiClient-4.5.csproj
+++ b/MegaApiClient-4.5/MegaApiClient-4.5.csproj
@@ -103,6 +103,9 @@
     <Compile Include="..\MegaApiClient\JsonSerialization.cs">
       <Link>JsonSerialization.cs</Link>
     </Compile>
+    <Compile Include="..\MegaApiClient\LogonSessionToken.cs">
+      <Link>LogonSessionToken.cs</Link>
+    </Compile>
     <Compile Include="..\MegaApiClient\MegaAesCtrStream.cs">
       <Link>MegaAesCtrStream.cs</Link>
     </Compile>
