--- a/MegaApiClient-3.5/MegaApiClient-3.5.csproj
+++ b/MegaApiClient-3.5/MegaApiClient-3.5.csproj
@@ -99,6 +99,9 @@
     <Compile Include="..\MegaApiClient\JsonSerialization.cs">
       <Link>JsonSerialization.cs</Link>
     </Compile>
+    <Compile Include="..\MegaApiClient\LogonSessionToken.cs">
+      <Link>LogonSessionToken.cs</Link>
+    </Compile>
     <Compile Include="..\MegaApiClient\MegaAesCtrStream.cs">
       <Link>MegaAesCtrStream.cs</Link>
     </Compile>
